--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn</title>
-    <link rel="stylesheet" href="/c:/Users/Goliath/Desktop/Quizlet/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
@@ -127,6 +127,6 @@
     <!-- Toast Notifications -->
     <div class="toast-container" id="toastContainer"></div>
 
-    <script src="/c:/Users/Goliath/Desktop/Quizlet/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
